--- a/cssnobootstrap/EstilosProyecto0/estilosPro0.css
+++ b/cssnobootstrap/EstilosProyecto0/estilosPro0.css
@@ -47,3 +47,39 @@ body {
     margin-left: -15rem;
   }
 }
+
+
+
+
+
+#sidebar-wrapper
+{
+    background-color: #2c786c!important;
+}
+
+#b2, #b3, #b4, #b5
+{
+    background-color: #2c786c!important;
+    color: blanchedalmond;
+}
+
+#b2:hover
+{
+    background-color: #004445!important;
+}
+
+#b3:hover
+{
+    background-color: #004445!important;
+}
+
+#b4:hover
+{
+    background-color: #004445!important;
+}
+
+#b5:hover
+{
+    background-color: #004445!important;
+}
+
