Se ha agregado /home, que es el inicio y se trabajo con variables de sesion

--- a/Proyecto1/static/css/proyecto1busqueda.css
+++ b/Proyecto1/static/css/proyecto1busqueda.css
@@ -5,9 +5,16 @@
  */
 body {
   overflow-x: hidden;
-  font-family: 'Open Sans', sans-serif;
-  background-color: #CF6C52;
+  font-family: 'Lobster', cursive;
+  background-color: #ffd5ab!important;
 }
+
+.dropdown-toggle
+{
+  background-color: red;
+}
+
+
 
 #sidebar-wrapper {
   min-height: 100vh;
