--- a/Proyecto1/templates/index.html
+++ b/Proyecto1/templates/index.html
@@ -15,6 +15,9 @@
 	<link href="https://fonts.googleapis.com/css?family=Poppins:600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+
+  <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
+
   <link href="signin.css" rel="stylesheet">
 </head>
 
@@ -31,7 +34,7 @@
 
 				<img src="{{ url_for('static', filename='img/logopaginatrans.png') }}" style="width: 80%; height: 70%;">
         <br><br>
-				<h4 class="title" style="color: #f6eedf!important;">BIENVENIDO</h4>
+				<h3 class="title" style="color: #f6eedf!important; font-family: 'Lobster', cursive;">Bienvenido!</h3>
            		<div class="input-div one">
            		   <div class="i">
            		   		<i class="fas fa-user"></i>
