--- a/Proyecto1/templates/index.html
+++ b/Proyecto1/templates/index.html
@@ -84,6 +84,21 @@
   <script src="{{url_for('static', filename='js/bootstrap.min.js')}}"></script>
   <script src="{{url_for('static', filename='js/mainp1.js')}}"></script>
 
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+
+  {% if error %}
+  <script type="text/javascript">
+        Swal.fire({
+            icon: 'error',
+            title: 'Oops...',
+            text: ' {{textoerror}}',
+            footer: '<span style="color: crimson!important"> Corrige tus datos para ingresar a Bookaholics! </span>',
+            width: '40%'
+        });
+  </script>
+  {% elif error == False %}
+
+  {% endif %}
 
 
   <!--Funciòn toogle-->
