se hicieron cambios

--- a/Proyecto1/templates/infolibro.html
+++ b/Proyecto1/templates/infolibro.html
@@ -109,6 +109,7 @@
         </table>
 
         <br>
+        <h1 class="mt-5" style=" font-family: 'Lobster', cursive;  font-size:400%!important;">Calificación del libro!</h1>
 
         <div class="container" style="background: green!important;">
           <div class="row justify-content-center">
