--- a/Proyecto1/templates/sesionbusqueda.html
+++ b/Proyecto1/templates/sesionbusqueda.html
@@ -41,7 +41,7 @@
 
               <a  class="nav-item nav-link active"></a>
               <a  class="nav-item nav-link active"><i class="fa fa-address-book" style="font-size:18px"></i> {{usuariomostrar}}</a>
-              <a href="#" class="nav-item nav-link" ><i class="	fa fa-home" style="font-size:18px;"></i> Home</a>
+              <a href="{{ url_for('index') }}" class="nav-item nav-link" ><i class="	fa fa-home" style="font-size:18px;"></i> Home</a>
               <a href="{{url_for('logout')}}" class="nav-item nav-link"><i class="fa fa-comments" style="font-size:18px"></i> Mis opiniones</a>
           </div>
           <form class="form-inline ml-auto">
